# tessesframework

./: .Config.cmake.in.kate-swp  .gitignore  .onedev-buildspec.yml  CMakeLists.txt  CMakePresets.json  Config.cmake.in  Dockerfile  Dockerfile.portable-json-creator  Dockerfile.run  LICENSE.md  OTHERS_CODE.md  README.md  TessesFrameworkFeatures.h.in  build-for-nfpm.sh  build-for-ppc.sh  changelog.md  nfpm.yaml.in  ppc-pkgbuild.in
.gitea/workflows/: tag.yaml
Packaging/: edit-formula.sh
Packaging/Linux/: PKGBUILD  build-arch.sh  build-debian-amd64.sh  build-ubuntu-jammy.sh  build-ubuntu-plucky.sh  make-control.sh  push-debian-amd64.sh  push-ubuntu-jammy.sh  push-ubuntu-plucky.sh  version.sh
Packaging/Linux/debian/: control-amd64
Packaging/Tools/: build.sh
Packaging/WinToolsIntel/: build.sh  x86.cmake  x86_64.cmake
apps/: guilayouttester.cpp  printtorrent.cpp  tanonydrop.cpp  tbin2h.cpp  tclearwebseed.cpp  tdoc2json.cpp  tdownloadsingletorrent.cpp  tfetch.cpp  tfileserver.cpp  tjson2doc.cpp  tjsonpretty.cpp  tjsonunpretty.cpp  trng.cpp  tshell.cpp  ttime.cpp  ttorrentcreate.cpp  tuuid.cpp  twatch.cpp
cmake/: apps.cmake  bin2h.cmake  examples.cmake  findmbed.cmake  helpers.cmake  install-dev.cmake  options.cmake  sharedlib.cmake  sources.cmake  staticlib.cmake  version.cmake
docker-compose/portable-json-creator/: docker-compose.yml
examples/: bmp.cpp  bmp2.cpp  bmp3.cpp  bmp4.cpp  console-list.cpp  console-raw.cpp  console-test.cpp  copyfile.cpp  databaseex.cpp  echo-my-name.cpp  echo-platform.cpp  fileserver.cpp  guikitchensink.cpp  mountabletest.cpp  pathtest.cpp  printjsondecodedemoji.cpp  runevent.cpp  safesubpath.cpp  sdl2.cpp  start-my-website.cpp  tests.cpp  timer.cpp  webserverex.cpp  wrappertest.c  wsecho.cpp
font/Mono/: README.md
font/NonMono/: License-OFL.txt
include/TessesFramework/: Args.hpp  Common.hpp  Console.hpp  HiddenField.hpp  Lazy.hpp  Random.hpp  TessesFramework.h  TessesFramework.hpp  Uuid.hpp
include/TessesFramework/BitTorrent/: TorrentFile.hpp  TorrentManager.hpp  TorrentStream.hpp
include/TessesFramework/Crypto/: ClientTLSStream.hpp  Crypto.hpp  MbedHelpers.hpp
include/TessesFramework/Date/: Date.hpp
include/TessesFramework/Filesystem/: FSHelpers.hpp  LocalFS.hpp  MemoryFilesystem.hpp  MountableFilesystem.hpp  NullFilesystem.hpp  RelativeFilesystem.hpp  SubdirFilesystem.hpp  TempFS.hpp  VFS.hpp  VFSFix.hpp
include/TessesFramework/Graphics/: Color.hpp  Image.hpp  Point.hpp  Rectangle.hpp  Size.hpp
include/TessesFramework/Graphics/ImageFormats/: Bitmap.hpp  ImageFormat.hpp
include/TessesFramework/Graphics/Renderers/: ImageRenderer.hpp  Renderer.hpp
include/TessesFramework/Http/: BasicAuthServer.hpp  CGIServer.hpp  CallbackServer.hpp  ChangeableServer.hpp  ContentDisposition.hpp  FileServer.hpp  HttpClient.hpp  HttpServer.hpp  HttpStream.hpp  HttpUtils.hpp  MountableServer.hpp  RouteServer.hpp  WebSocket.hpp
include/TessesFramework/Mail/: Smtp.hpp
include/TessesFramework/Platform/: Environment.hpp  Process.hpp
include/TessesFramework/SDL2/: FontCache.hpp  GUI.hpp  ParseColor.hpp  SDL_Headers.hpp  Stream.hpp
include/TessesFramework/SDL2/Views/: AbsoluteView.hpp  ButtonView.hpp  CheckView.hpp  DropDownView.hpp  EditTextView.hpp  HScrollView.hpp  HStackView.hpp  LabelView.hpp  MultilineEditTextView.hpp  (+7 more)
include/TessesFramework/Serialization/: Bencode.hpp  BitConverter.hpp  Json.hpp  SQLite.hpp
include/TessesFramework/Streams/: BufferedStream.hpp  ByteReader.hpp  ByteWriter.hpp  FileStream.hpp  MemoryStream.hpp  NetworkStream.hpp  PtyStream.hpp  Stream.hpp
include/TessesFramework/Text/: HeaderGenerator.hpp  StringConverter.hpp
include/TessesFramework/TextStreams/: StdIOReader.hpp  StdIOWriter.hpp  StreamReader.hpp  StreamWriter.hpp  StringReader.hpp  StringWriter.hpp  TextReader.hpp  TextWriter.hpp
include/TessesFramework/Threading/: Mutex.hpp  Thread.hpp  ThreadPool.hpp
packaging/: arch-ppc.txt
pkgconfig/: CMakeLists.txt  tessesframework.pc.in
portable-json-creator/: index.html
portable-json-creator/portableapps/: index.html
portable-json-creator/relative/: index.html
src/: Args.cpp  Console.cpp  HiddenField.cpp  Random.cpp  TF_Init.cpp  Uuid.cpp  wrapper.cpp
src/BitTorrent/: TorrentFile.cpp  TorrentManager.cpp  TorrentStream.cpp
src/Crypto/: ClientTLSStream.cpp  MbedHelpers.cpp
src/Crypto/MbedTLS/: ClientTLSStream.cpp  Crypto.cpp
src/Date/: Date.cpp
src/Filesystem/: FSHelpers.cpp  LocalFS.cpp  MemoryFilesystem.cpp  MountableFilesystem.cpp  NullFilesystem.cpp  RelativeFilesystem.cpp  SubdirFilesystem.cpp  TempFS.cpp  VFS.cpp
src/Graphics/: Color.cpp  Image.cpp
src/Graphics/ImageFormats/: Bitmap.cpp  ImageFormat.cpp
src/Graphics/Renderers/: ImageRenderer.cpp  Renderer.cpp
src/Http/: BasicAuthServer.cpp  CGIServer.cpp  CallbackServer.cpp  ChangeableServer.cpp  ContentDisposition.cpp  FileServer.cpp  HttpClient.cpp  HttpServer.cpp  HttpStream.cpp  HttpUtils.cpp  MountableServer.cpp  RouteServer.cpp  WebSocket.cpp
src/Mail/: Smtp.cpp
src/Platform/: Environment.cpp  Process.cpp
src/Platform/sago/: platform_folders.cpp  platform_folders.h
src/SDL2/: FontCache.cpp  GUI.cpp  GUIPopup.cpp  GUIWindow.cpp  Stream.cpp  View.cpp
src/SDL2/Views/: AbsoluteView.cpp  ButtonView.cpp  CheckView.cpp  DropDownView.cpp  EditTextView.cpp  HScrollView.cpp  HStackView.cpp  LabelView.cpp  MultilineEditTextView.cpp  PictureView.cpp  ProgressView.cpp  ScrollableTextListView.cpp  TabView.cpp  TextListView.cpp  VScrollView.cpp  VStackView.cpp
src/Serialization/: Bencode.cpp  BitConverter.cpp  Json.cpp  SQLite.cpp
src/Serialization/sqlite/: sqlite3-mod.c  sqlite3-mod.h  sqlite3.h  vfs.c
src/Streams/: BufferedStream.cpp  ByteReader.cpp  ByteWriter.cpp  FileStream.cpp  MemoryStream.cpp  NetworkStream.cpp  PtyStream.cpp  Stream.cpp
src/Text/: HeaderGenerator.cpp  StringConverter.cpp
src/TextStreams/: StdIOReader.cpp  StdIOWriter.cpp  StreamReader.cpp  StreamWriter.cpp  StringReader.cpp  StringWriter.cpp  TextReader.cpp  TextWriter.cpp
src/Threading/: Mutex.cpp  Thread.cpp  ThreadPool.cpp
